--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
 
+title: Time Machine theme
+description: Time Machine is a theme for GitHub Pages.
+show_downloads: true
+google_analytics:
+theme: jekyll-theme-time-machine
