--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
 
-title: Time Machine theme
+title: A Machine theme
 description: Time Machine is a theme for GitHub Pages.
 show_downloads: true
 google_analytics:
-theme: jekyll-theme-time-machine
+remote_theme: pages-themes/architect@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
